
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {char* distro; char* version; } ;


 int ARRAY_SIZE (TYPE_1__*) ;
 int DISTRO_CODENAME_LENGTH ;
 int EXIT_FAILURE ;
 int KERNEL_VERSION_LENGTH ;
 int exit (int ) ;
 int get_distro_codename (char*,int) ;
 int get_kernel_version (char*,int) ;
 int kernel ;
 TYPE_1__* kernels ;
 int printf (char*,...) ;
 scalar_t__ strcmp (char*,char*) ;

void detect_versions() {
 char codename[DISTRO_CODENAME_LENGTH];
 char version[KERNEL_VERSION_LENGTH];

 get_distro_codename(&codename[0], DISTRO_CODENAME_LENGTH);
 get_kernel_version(&version[0], KERNEL_VERSION_LENGTH);

 int i;
 for (i = 0; i < ARRAY_SIZE(kernels); i++) {
  if (strcmp(&codename[0], kernels[i].distro) == 0 &&
      strcmp(&version[0], kernels[i].version) == 0) {
   printf("[.] kernel version '%s' detected\n", kernels[i].version);
   kernel = i;
   return;
  }
 }

 printf("[-] kernel version not recognized\n");
 exit(EXIT_FAILURE);
}
